Arabic fixes + mobile updated

--- a/Web App/index.html
+++ b/Web App/index.html
@@ -286,14 +286,14 @@
         </div>
         <!-- Title -->
         <div class="calcite-title calcite-overflow-hidden">
-            <span class="calcite-title-mainz hidden-xs">Style Explorer</span>
+            <span class="calcite-title-mainz hidden-xs">مرشد الحاج</span>
             <span class="calcite-title-divider hidden-xs"></span>
             <span class="calcite-title-sub hidden-xs">مرشدك في رحلة الحاج </span>
         </div>
         <!-- Nav -->
         <ul class="calcite-nav nav navbar-nav">
-            <li class="active"><a id="mapNav" class="hidden-xs hidden-sm" href="#mapTab" aria-controls="mapTab" aria-expanded="true" role="tab" data-toggle="tab" data-tooltip="tip" title="2D View" data-placement="bottom">Map</a></li>
-            <li><a id="sceneNav" class="hidden-xs hidden-sm" href="#sceneTab" aria-controls="sceneTab" role="tab" data-toggle="tab" data-tooltip="tip" title="3D View" data-placement="bottom">Scene</a></li>
+            <li class="active"><a id="mapNav" class="hidden-xs hidden-sm" href="#mapTab" aria-controls="mapTab" aria-expanded="true" role="tab" data-toggle="tab" data-tooltip="tip" title="2D View" data-placement="bottom">خريطة</a></li>
+            <li><a id="sceneNav" class="hidden-xs hidden-sm" href="#sceneTab" aria-controls="sceneTab" role="tab" data-toggle="tab" data-tooltip="tip" title="3D View" data-placement="bottom">كرة أرضية</a></li>
             <li><div class="calcite-navbar-search calcite-search-expanded" tabindex="-1"><div id="searchNavDiv" tabindex="0"></div></div></li>
         </ul>
     </nav><!--/.navbar -->
